<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="Total_songs">Total Songs</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="favourites_empty_btn">favourites empty</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">loading…</string>
    <string name="repeat_icon">Repeat</string>
    <string name="eualizer_icon">Equalizer</string>
    <string name="timer_icon">Timer</string>
    <string name="share_icon">Share</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">welocme to \n sanju music wrold</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>

</resources>
    