<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        tools:ignore="NestedWeights">

        <ImageButton
            android:id="@+id/backbtnPA"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"
            android:background="@android:color/transparent"
            android:layout_marginStart="7dp"
            app:tint="#0FE89C"
            android:contentDescription="@string/back_btn">

        </ImageButton>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/world_of_music"
            android:textColor="#F2FBF8"
            android:textSize="20sp"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            >

        </TextView>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourites_empty_btn"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/favourite_empty_icon"
            app:tint="#C30303">

        </ImageButton>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImagePA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/musicplayer_icon_splash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="#0FE89C"
        app:strokeWidth="5dp">

    </com.google.android.material.imageview.ShapeableImageView>

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_weight="1"
        tools:ignore="NestedWeights"
        >

    </TextView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_margin="17dp"
    android:layout_weight="1">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/previousbtnPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/previous_icon"
        app:iconSize="40dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playpausebtnPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="#F11212"
        app:icon="@drawable/pause_icon"
        app:iconSize="50dp"
        app:iconTint="@color/white"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nextbtnPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/next_icon"
        app:iconSize="40dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tvseekbarstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/start_tv"
            android:gravity="center">

        </TextView>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

        </androidx.appcompat.widget.AppCompatSeekBar>

        <TextView
            android:id="@+id/tvseekbarend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/end_tv"
            android:gravity="center">

        </TextView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/repeatbtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_icon"
            android:minHeight="48dp"
            android:src="@drawable/repeat_icon"
            app:tint="@color/white">

        </ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/eualizer_icon"
            android:minHeight="48dp"
            android:src="@drawable/equalizer_icon"
            app:tint="@color/white">

        </ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_icon"
            android:minHeight="48dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/white">

        </ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_icon"
            android:minHeight="48dp"
            android:src="@drawable/share_icon"
            app:tint="@color/white">

        </ImageButton>


    </LinearLayout>


</LinearLayout>