<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@color/black">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <!-- for buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/shufflebtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
          android:contentDescription="@string/shuffle_btn"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:drawableTop="@drawable/shuffle_icon"
          android:text="@string/shuffle_btn"
          android:textColor="@color/white"
          android:textAllCaps="false">

    </Button>
      <Button
          android:id="@+id/favouritesbtn"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_weight="1"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:drawableTop="@drawable/favourites_icon"
          android:text="@string/favourites_btn"
          android:textColor="@color/white"
          android:textAllCaps="false">

      </Button>
      <Button
          android:id="@+id/playlistbtn"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_weight="1"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:drawableTop="@drawable/playlist_icon"
          android:text="@string/playlist_btn"
          android:textColor="@color/white"
          android:textAllCaps="false">

      </Button>

    </LinearLayout>
   <TextView
       android:id="@+id/totalsongs"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/Total_songs"
       android:layout_margin="10dp"
       android:textColor="@color/white">

   </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musicRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon">

    </androidx.recyclerview.widget.RecyclerView>

  </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu">


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>